--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -169,6 +169,17 @@ padding-right: 16px;
     font-weight: 600;
 }
 
+
+/** Lists **/
+
+li {
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+
+
+
 /** CUSTOM **/
 header {
     background-color: var(--arrow-darkblue);
@@ -178,10 +189,13 @@ header {
 
 
 .discover {
-    background-color: var(--arrow-blue);
+    background-color: var(--bs-body-color);
     color: var(--bs-body-bg);    
 }
-
+    .discover .btn { 
+        margin-bottom: 0!important;
+        margin-right: 4px;
+    }
 
 .discovercard {
     height: 400px !important;
@@ -231,7 +245,7 @@ header {
 .bg-img10 {     background-image: url('../assets/flyarrow-supply.jpeg')}
 .bg-img11 {     background-image: url('../assets/flyarrow-medicine.jpg')}
 
-
+        
 .cta-area {
     background-image: url('../assets/gradint.jpg');
     margin-bottom: 120px;
@@ -285,5 +299,31 @@ header {
 }
 
 .accordion-body {
-    padding: 10px 35px 35px 35px;
+    padding: 10px 35px 35px 35px;}
+
+    
+.infobox {   
+    padding: 24px;
+border: 1px solid #2abb94;
+border-radius: 25px;
+    background-color: #2b7fa3;
+    }
+
+.modal-content {
+background-color: var(--bs-body-color);
 }
+
+    .modal-content .btn-close {
+        --bs-btn-close-color: #000;}
+
+.modalimg {
+    width: 100%;
+    height: 200px;
+    border-radius: 24px;
+}
+
+.infobox h4
+{
+    font-size: var(--bs-body-font-size);
+    text-transform: uppercase;
+    font-weight: 700;}
