--- a/src/assets/styles/_fly_arrow.scss
+++ b/src/assets/styles/_fly_arrow.scss
@@ -52,9 +52,9 @@ p {
 }
 
 .btn-info {
-    --bs-btn-color: #ff624a;
+    --bs-btn-color: var(--bs-primary);
     --bs-btn-hover-color: #fff;
-    --bs-btn-border-color: #ff624a;
+    --bs-btn-border-color: var(--bs-primary);
     --bs-btn-hover-bg: var(--bs-secondary);
     --bs-btn-hover-border-color: var(--bs-secondary);
     --bs-btn-bg: none;
@@ -66,35 +66,8 @@ p {
 }
 
 .btn-primary {
-    background-color: #ff624a;
-    border-color: #ff624a;
     --bs-btn-color: #fff;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #ff624a;
-    --bs-btn-hover-border-color:#ff624a;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: var(--bs-secondary);
-    --bs-btn-active-border-color: var(--bs-secondary);
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: var(--bs-secondary);
-    --bs-btn-disabled-border-color: var(--bs-secondary);
-}
-.btn-secundary {
-    --bs-btn-color: #ff624a;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #ff624a;
-    --bs-btn-hover-border-color:#ff624a;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: var(--bs-secondary);
-    --bs-btn-active-border-color: var(--bs-secondary);
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: var(--bs-secondary);
-    --bs-btn-disabled-border-color: var(--bs-secondary);
-    border: 2px #ff624a solid;
 }
 
 a,
@@ -179,12 +152,6 @@ header p {
     --bs-btn-close-color: #000;
 }
 
-.modalimg {
-    width: 100%;
-    height: 200px;
-    border-radius: 24px;
-}
-
 .infobox h4 {
     font-size: var(--bs-body-font-size);
     text-transform: uppercase;
@@ -203,13 +170,13 @@ header p {
     background-position: center bottom;
 }
 
-.bg-gradientimg {
+.bg-gradient-img {
     background-image: url('/img/bg-top2.webp');
     background-size: cover;
     background-position: center 90%;
 }
 
-.bg-gradientimg2 {
+.bg-gradient-img2 {
     background-image: url('/img/bg-top4.webp');
     background-size: cover;
     background-position: center 10%;
@@ -238,15 +205,13 @@ header p {
     background-repeat: repeat;
 }
 
-.tag2 {
-    color: #f8f9fa;
-  padding: 8px 16px;
-  border-radius: 50rem;
-  background-color: var(--bs-teal);
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 0.8rem;
-  margin-right: 12px;
+.tag {
+    color: $gray-100;
+    padding: 8px 16px;
+    border-radius: $border-radius-pill;
+    background-color: var(--bs-teal);
+    text-transform: uppercase;
+    font-weight: 600;
 }
 
 .mini-cards h5{
